# TechnicalTraining_SocialNetworkAnalyzer_MiniProject

./: README.md
priyanshu-tt/: PROJECT_DOCUMENTATION.md  README.md
priyanshu-tt/backend/: CMakeLists.txt  Graph.cpp  Graph.h  main.cpp  server  server_simple.cpp
priyanshu-tt/frontend/: index.html  script.js  style.css
